--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,18 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "Arvtesh",
+      "url": "https://registry.npmjs.org/",
+      "scopes": [
+        "com.unityfx"
+      ]
+    }
+  ],
   "dependencies": {
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.feature.development": "1.0.1",
     "com.unity.render-pipelines.universal": "14.0.12",
-    "com.unity.textmeshpro": "3.0.7",
+    "com.unityfx.outline.urp": "0.5.0",
     "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
